[package]
name = "rugfield"
version = "0.2.1"
authors = ["axect <axect@outlook.kr>"]
edition = "2021"
description = "A Rust library for generating Gaussian Random Fields using the circulant embedding method"
license = "MIT"
repository = "https://github.com/axect/Rugfield"
readme = "README.md"
keywords = ["gaussian", "random", "field"]
categories = ["science"]
exclude = ["examples/"]

[dependencies]
peroxide = "0.37"
puruspe = "0.2.4"
rustfft = "6.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
peroxide = { version = "0.37", features = ["plot"] }

[features]
serde = ["dep:serde", "peroxide/serde"]
